tests/models/enum/unit/fail/gt.rs
use dade::model;
#[model]
enum TestModel {
   #[field(gt = 2)]
    Value
}
fn main() {}
