tests/models/enum/unit/fail/gt.stderr
error: Only support alias term on the unit field.
 --> tests/models/enum/unit/fail/gt.rs:5:5
  |
5 |     Value
  |     ^^^^^
